# VRCForge

./: .gitattributes  .gitignore  DEPENDENCIES.md  HANDOFF.md  NOTICE  README.md  SHADER_TUNING_PLAN.md  USER_MANUAL.md  VERSION  agent_gateway.py  agent_goal_store.py  agent_memory_store.py  authoritative_unity_writes.py  backend_owner_lease.py  background_goal_delivery.py  background_goal_runtime.py  chat_attachment_vault.py  context_compaction.py  dashboard_server.py  desktop_apps.py  desktop_capture.py  desktop_executor.py  desktop_operations.py  desktop_overlay.py  desktop_overlay_visuals.py  desktop_uia.py  desktop_worker.py  developer_options_guard.py  diagnostic_logging.py  diagnostic_privacy.py  diagnostic_safety.py  doctor_service.py  durable_audit_outbox.py  external_agent_connector_installer.py  external_agent_connectors.py  index.html  material_shader_assignment.py  memory_consolidation.py  memory_consolidation_sources.py  memory_review_dashboard_adapter.py  (+28 more)
dashboard/: app.js  (+2 more)
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: main-window.json
src-tauri/src/: backend.rs  capture_helper.rs  commands.rs  event_bridge.rs  main.rs  primitive_attestor_protocol.rs  primitive_evidence_authority_contract.rs  primitive_evidence_authority_install.rs  primitive_evidence_authority_key.rs  primitive_evidence_authority_ledger.rs  primitive_evidence_authority_pipe.rs  primitive_evidence_authority_runtime.rs  primitive_evidence_authority_supervisor.rs  primitive_evidence_authority_windows.rs  sanitize.rs
src-tauri/src/primitive_evidence_authority_install/: manifest.rs  preview.rs  receipt.rs  tests.rs  transaction.rs
src-tauri/src/primitive_evidence_authority_ledger/: tests.rs
src-tauri/src/primitive_evidence_authority_pipe/: tests.rs
src-tauri/src/primitive_evidence_authority_runtime/: tests.rs
src-tauri/src/primitive_evidence_authority_supervisor/: tests.rs
src-tauri/src/primitive_evidence_authority_windows/: tests.rs
(+367 files in other folders)
