[package]
name = "vrcforge-agentic-app"
version = "1.1.1-rc.4"
description = "VRCForge agentic desktop application"
authors = ["VRCForge"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2.2.0", features = [] }

[dependencies]
getrandom = "0.3"
hmac = "0.12"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
tauri = { version = "2.2.0", features = ["tray-icon"] }
ureq = { version = "2", default-features = false, features = ["json"] }

[target.'cfg(windows)'.dependencies]
rfd = "0.15"
