[package]
name = "vrcforge-agentic-app"
version = "1.3.6"
description = "VRCForge agentic desktop application"
authors = ["VRCForge"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2.2.0", features = [] }

[dependencies]
getrandom = "0.3"
hmac = "0.12"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
tauri = { version = "2.2.0", features = ["tray-icon"] }
tauri-plugin-notification = "2"
tungstenite = { version = "0.24", default-features = false, features = ["handshake", "url"] }
ureq = { version = "2", default-features = false, features = ["json"] }

[target.'cfg(windows)'.dependencies]
rfd = "0.15"
windows-capture = "2.0.0"
windows-sys = { version = "0.59", features = ["Win32_Foundation", "Win32_Security", "Win32_Security_Cryptography", "Win32_System_JobObjects", "Win32_System_Threading"] }
